# rewild

./: .eleventy.js  .gitignore  CHANGELOG.md  FUNDING.md  README.md  SITE-SPEC.md  netlify.toml  package-lock.json  package.json  pyproject.toml  rewild-essay.md  rewild.py  tailwind.config.cjs
.github/workflows/: ci.yml
cli/: __init__.py
cli/rewild_journal/: __init__.py  cli.py
docs/: CONTRIBUTING.md  SUPPORT.md  TODO.md
src/: 404.md  about.md  access.md  index.md  resources.md  sitemap.xml.njk  styles.css  tailwind.css
src/_data/: nav.json  site.json
src/_includes/layouts/: base.njk
src/favicon/: site.webmanifest
src/framework/: access-in-wilderness.md  ecology-of-mind.md  index.md  indigenous-and-queer-lenses.md  nature-as-text.md  wild-minds-workshop.md
src/practices/: composting-revision.md  field-journal-nature-as-text.md  freewriting-as-rewilding.md  index.md  mycelial-networks.md  succession-writing.md  watershed-writing.md  writing-with-the-cycles.md
src/workshop/: index.md  session-1-ecology-of-mind.md  session-2-nature-as-text.md  session-3-indigenous-queer.md  session-4-disabled-ecologies.md  session-5-composting-succession.md  session-6-reflection-futures.md
tests/: test_cli.py
